# rival

./: .gitignore  API-FLOW-PAYLOAD.md  DEPLOYMENT-NO-DOCKER.md  PRD.md  README.md  at-rival-api-key-stack.md  at-rival-architecture-stack.md  at-rival-architecture.md  at-rival-completion-check.md  at-rival-completion-checklist.md  at-rival-core-grading-logic.md  at-rival-desrcription.md  at-rival-ollama-local.md  at-rival-relational-schem4e-blueprint.md  dry-run-implementation.md  pyproject.toml  the-rival-data-model.md
deploy/systemd/: rival-api.service  rival-worker.service
scripts/: dev-start.ps1  install-systemd.sh  mock_haynesworld_api.py  mock_ollama.py  ollama_chat.ps1  ollama_chat.py  ubuntu-setup.sh
src/haynesworld_rival/: __init__.py  cli.py  client.py  config.py  contracts.py  data_engine.py  db.py  persona.py  version.py  webapp.py  worker.py
tests/: test_admin_dashboard_diagnostics.py  test_client_parsing.py  test_lock_time_gating.py  test_persona_ollama.py  test_schema_versioning.py  test_worker_run_tracking.py
