[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haynesworld-rival"
version = "0.1.0"
description = "Standalone AI patron service for HaynesWorld"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "HaynesWorld" }]
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn>=0.30.0",
	"psycopg[binary]>=3.2.0",
]

[project.scripts]
haynesworld-rival = "haynesworld_rival.cli:main"
haynesworld-rival-api = "haynesworld_rival.webapp:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]